6.6.2 - Alpha - 更新 ApkSig 源代码; APK 文件类型增加文件大小与签名方案信息